[workspace]

members = [
    "ch02/sec231",
    "ch02/sec232",
    "ch02/sec233",
    "ch02/sec234",
    "ch02/sec235",
    "ch02/sec236",
    "ch02/sec237",
    "ch02/sec238",
    "ch02/sec239",
    "ch03/sec381",
    "ch03/sec382",
    "ch03/sec383",
    "ch03/sec384",
    "ch04/sec70",
    "ch07/sec11",
    "chat/protocol",
    "chat/packet",
    "chat/connection",
    "chat/client",
]
