[workspace]

members = [
    "ch02/sec231",
    "ch02/sec232",
    "ch02/sec233",
    "ch02/sec234",
    "ch02/sec235",
    "ch02/sec236",
    "ch02/sec237",
    "ch02/sec238",
    "ch02/sec239",
    "ch03/sec381",
    "ch03/sec382",
    "ch03/sec383",
    "ch03/sec384",
    "ch03/sec385",
    "ch03/sec390",
    "ch04/sec410",
    "ch04/sec420",
    "ch04/sec430",
    "ch04/sec461",
    "ch04/sec470",
    "ch05/sec510",
    "ch07/sec11",
    "chat/protocol",
    "chat/packet",
    "chat/connection",
    "chat/state",
    "chat/group",
    "chat/client",
    "chat/server",
    "dchat/dclient",
]
