[package]
name = "sec511"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.12.0"
async-net = "1.7.0"
futures-lite = "1.12.0"
smol = "1.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
