[package]
name = "group"
version = "0.1.0"
edition = "2021"
authors = ["Keith Noguchi <hack@noguchi.us>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.0", default-features = false }
connection = { path = "../connection" }
protocol = { path = "../protocol" }
tokio = { version = "1.0", features = ["sync"] }
