[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Keith Noguchi <hack@noguchi.us>"]

[dependencies]
async-std = "1"
group = { path = "../group" }
state = { path = "../state" }
packet = { path = "../packet" }
protocol = { path = "../protocol" }
connection = { path = "../connection" }
